Added USE_BRANDED_IMAGES flag for onboarding design, to distinguish wether we should show or hide images

--- a/apps/multiplatform/gradle.properties
+++ b/apps/multiplatform/gradle.properties
@@ -38,3 +38,6 @@ compose.version=1.8.2
 
 # Choose sqlite or postgres backend
 database.backend=sqlite
+
+# Set to true for branded builds (includes proprietary illustrations). Default: false (AGPL-compliant build).
+# USE_BRANDED_IMAGES=true
