--- a/apps/multiplatform/gradle.properties
+++ b/apps/multiplatform/gradle.properties
@@ -24,8 +24,8 @@ android.nonTransitiveRClass=true
 kotlin.mpp.androidSourceSetLayoutVersion=2
 kotlin.jvm.target=11
 
-android.version_name=6.4.10
-android.version_code=333
+android.version_name=6.4.10-mtn.2
+android.version_code=335
 
 android.bundle=false
 
