Added initial implementation of the Intro, Create profile, Conditions screens

--- a/apps/multiplatform/gradle.properties
+++ b/apps/multiplatform/gradle.properties
@@ -40,4 +40,4 @@ compose.version=1.8.2
 database.backend=sqlite
 
 # Set to true for branded builds (includes proprietary illustrations). Default: false (AGPL-compliant build).
-# USE_BRANDED_IMAGES=true
+ USE_BRANDED_IMAGES=true
