--- a/apps/simplex-support-bot/package.json
+++ b/apps/simplex-support-bot/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "node --env-file=.env dist/index.js",
     "test": "vitest run"
   },
   "dependencies": {
