website: add build infrastructure for /file route

--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,7 @@ website/src/img/images/
 website/src/images/
 website/src/js/lottie.min.js
 website/src/js/ethers*
+website/src/file-assets/
 website/src/privacy.md
 # Generated files
 website/package/generated*
